# Ai-Code-Visualizer

./: .gitignore  README.md
ai-bridge/: package-lock.json  package.json  tsconfig.json
ai-bridge/src/: AgentManager.ts  agents.ts  asyncHelpers.ts  errors.ts  index.ts  jsonUtils.ts  orchestrator.ts  types.ts
backend/: Cargo.toml  graph_output.json
backend/src/: lib.rs  main.rs  models.rs  parser.rs  scan.rs  server.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/: enriched_graph.json
frontend/src/: App.vue
scanner-api/: package-lock.json  package.json  tsconfig.json
scanner-api/src/: index.ts
