[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dashmap = "6.1.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tree-sitter = "0.26.8"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"

[profile.release]
opt-level = 3
